--- a/app/src/main/res/drawable/shape_underline.xml
+++ b/app/src/main/res/drawable/shape_underline.xml
@@ -7,7 +7,7 @@
         android:top="-2dp">
         <shape android:shape="rectangle" >
             <stroke
-                android:width="1px"
+                android:width="1dp"
                 android:color="#647B8AA4"
                 />
 
