--- a/app/src/main/res/drawable/shape_circle.xml
+++ b/app/src/main/res/drawable/shape_circle.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#48b3ff"/>
+        android:color="@color/primary"/>
     <corners android:radius="100dp"/>
 </shape>
