--- a/app/src/main/res/layout/account_side_item.xml
+++ b/app/src/main/res/layout/account_side_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layoutDirection="rtl"
     android:gravity="center_vertical"
@@ -9,7 +10,7 @@
     android:background="@drawable/shape_underline_dashed">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_weight="3"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -22,9 +23,10 @@
             android:background="@drawable/shape_underline"
             android:gravity="center_vertical">
             <TextView
+                android:id="@+id/textView_acount_side_fullName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/font_large"
+                android:textSize="@dimen/font_medium"
                 android:text="نوید مندیس"
                 android:textColor="@color/primary_text"
                 android:gravity="center_vertical"/>
