--- a/app/src/main/res/layout/account_side_item.xml
+++ b/app/src/main/res/layout/account_side_item.xml
@@ -1,115 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/linearLayout_account_side_main"
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:orientation="vertical"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layoutDirection="rtl"
+android:gravity="center_vertical"
+android:padding="@dimen/padding_large"
+android:layout_margin="@dimen/padding_small"
+android:background="#ccc">
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layoutDirection="rtl"
-    android:gravity="center_vertical"
-    android:padding="@dimen/padding_large"
-    android:layout_margin="@dimen/padding_small"
-    android:background="@drawable/shape_underline_dashed">
+    android:gravity="center_vertical">
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/padding_large">
+        android:gravity="center_vertical">
+
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/linearLayout_acount_side_main_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_underline"
-            android:gravity="center_vertical">
+            android:backgroundTint="@color/icons"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textView_acount_side_fullName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/font_medium"
+                android:gravity="center_vertical"
                 android:text="نوید مندیس"
-                android:textColor="@color/primary_text"
-                android:gravity="center_vertical"/>
+                android:textColor="@color/icons"
+                android:textSize="@dimen/font_large" />
+
             <TextView
+                android:id="@+id/textView_acount_side_dash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/font_large"
+                android:gravity="center_vertical"
                 android:text=" _ "
-                android:gravity="center_vertical"/>
+                android:textColor="@color/icons"
+                android:textSize="@dimen/font_large" />
+
             <TextView
+                android:id="@+id/textView_acount_side_company_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/font_small"
+                android:gravity="center_vertical"
                 android:text="زاگ استادیو"
-                android:textColor="#ccc"
-                android:gravity="center_vertical"/>
+                android:textColor="@color/icons"
+                android:textSize="@dimen/font_small" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:padding="@dimen/padding_bit">
             <ImageView
+                android:id="@+id/imageView_acount_side_bedehi"
                 android:layout_width="@dimen/padding_large"
                 android:layout_height="@dimen/padding_large"
                 android:src="@drawable/shape_arrow_down"
                 android:gravity="center_vertical"/>
             <TextView
+                android:id="@+id/textView_acount_side_bedehi_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" بدهکار "
                 android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/red"
+                android:textColor="@color/icons"
                 android:gravity="center_vertical"/>
             <TextView
+                android:id="@+id/textView_acount_side_bedehi_dash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" - "
                 android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/red"
+                android:textColor="@color/icons"
                 android:gravity="center_vertical"/>
             <TextView
+                android:id="@+id/textView_acount_side_bedehi_mablagh"
+                android:paddingRight="@dimen/padding_bit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="15,000,000 "
-                android:lines="1"
+                android:text="150,000,000"
                 android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/red"
+                android:textColor="@color/icons"
                 android:gravity="center_vertical"/>
             <TextView
+                android:id="@+id/textView_acount_side_bedehi_vahed"
+                android:layout_marginRight="@dimen/padding_bit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ریال"
                 android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/red"
+                android:textColor="@color/icons"
                 android:gravity="center_vertical"/>
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left|center_vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/shape_call"
-        android:background="@drawable/shape_circle"
-        android:backgroundTint="@color/primary_dark"
-        android:padding="@dimen/padding_medium"
-        android:layout_marginLeft="@dimen/padding_medium"
-        />
+        <ImageView
+            android:id="@+id/imageView_acount_side_call"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/shape_call"
+            android:tint="@color/primary_dark"
+            android:padding="@dimen/padding_medium"
+            android:layout_marginLeft="@dimen/padding_medium"
+            />
 
-    <ImageView
+        <ImageView
+            android:id="@+id/imageView_acount_side_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/shape_arrow_drop_up"
+            android:tint="@color/primary_dark"
+            android:padding="@dimen/padding_medium"/>
+
+    </LinearLayout>
+
+</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout_account_side_extra_information"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+<LinearLayout
+    android:layout_marginTop="@dimen/padding_large"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/shape_arrow_drop_down"
-        android:background="@drawable/shape_circle"
-        android:backgroundTint="@color/primary_dark"
-        android:padding="@dimen/padding_medium"/>
+        android:textSize="@dimen/font_small"
+        android:text="تلفن :"
+        android:textColor="@color/icons"
+        android:gravity="center_vertical"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_small"
+        android:text="05123565448"
+        android:paddingRight="@dimen/padding_medium"
+        android:paddingLeft="@dimen/padding_medium"
+        android:textColor="@color/icons"
+        android:gravity="center_vertical"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_small"
+        android:text="همراه :"
+        android:layout_marginRight="@dimen/padding_large"
+        android:textColor="@color/icons"
+        android:gravity="center_vertical"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_small"
+        android:text="09359146436"
+        android:paddingRight="@dimen/padding_medium"
+        android:paddingLeft="@dimen/padding_medium"
+        android:textColor="@color/icons"
+        android:gravity="center_vertical"/>
+
+</LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_small"
+        android:text="آدرس :"
+        android:textColor="@color/icons"
+        android:gravity="center_vertical"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_small"
+        android:text="سبزوار، خیابان ابن یمین، ساختمان دادآفرین"
+        android:textColor="@color/icons"
+        android:paddingRight="@dimen/padding_medium"
+        android:paddingLeft="@dimen/padding_medium"
+        android:gravity="center_vertical"/>
+
+</LinearLayout>
 
     </LinearLayout>
 
