--- a/app/src/main/res/layout/account_side_item.xml
+++ b/app/src/main/res/layout/account_side_item.xml
@@ -9,136 +9,143 @@ android:layoutDirection="rtl"
 android:gravity="center_vertical"
 android:padding="@dimen/padding_large"
 android:layout_margin="@dimen/padding_small"
-android:background="#ccc">
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical">
+android:background="@drawable/shape_underline_dashed">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/linearLayout_acount_side_main_information"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_underline"
-            android:backgroundTint="@color/icons"
+            android:layout_weight="4"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView_acount_side_fullName"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/linearLayout_acount_side_main_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_underline"
+                android:backgroundTint="@color/primary_text"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView_acount_side_fullName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="نوید مندیس"
+                    android:textColor="@color/primary_text"
+                    android:textSize="@dimen/font_large" />
+
+                <TextView
+                    android:id="@+id/textView_acount_side_dash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text=" _ "
+                    android:textColor="@color/primary_text"
+                    android:textSize="@dimen/font_large" />
+
+                <TextView
+                    android:id="@+id/textView_acount_side_company_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="زاگ استادیو"
+                    android:textColor="@color/primary_text"
+                    android:textSize="@dimen/font_small" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:text="نوید مندیس"
-                android:textColor="@color/icons"
-                android:textSize="@dimen/font_large" />
+                android:orientation="horizontal"
+                android:padding="@dimen/padding_bit">
 
-            <TextView
-                android:id="@+id/textView_acount_side_dash"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text=" _ "
-                android:textColor="@color/icons"
-                android:textSize="@dimen/font_large" />
+                <ImageView
+                    android:id="@+id/imageView_acount_side_bedehi"
+                    android:layout_width="@dimen/padding_large"
+                    android:layout_height="@dimen/padding_large"
+                    android:gravity="center_vertical"
+                    android:src="@drawable/shape_arrow_down"
+                    android:tint="@color/green" />
 
-            <TextView
-                android:id="@+id/textView_acount_side_company_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="زاگ استادیو"
-                android:textColor="@color/icons"
-                android:textSize="@dimen/font_small" />
+                <TextView
+                    android:id="@+id/textView_acount_side_bedehi_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text=" بدهکار "
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/font_xsmall" />
+
+                <TextView
+                    android:id="@+id/textView_acount_side_bedehi_dash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text=" - "
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/font_xsmall" />
+
+                <TextView
+                    android:id="@+id/textView_acount_side_bedehi_mablagh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingRight="@dimen/padding_bit"
+                    android:text="150,000,000"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/font_xsmall" />
+
+                <TextView
+                    android:id="@+id/textView_acount_side_bedehi_vahed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/padding_bit"
+                    android:gravity="center_vertical"
+                    android:text="ریال"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/font_xsmall" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:padding="@dimen/padding_bit">
+            android:gravity="left|center_vertical">
+
             <ImageView
-                android:id="@+id/imageView_acount_side_bedehi"
-                android:layout_width="@dimen/padding_large"
-                android:layout_height="@dimen/padding_large"
-                android:src="@drawable/shape_arrow_down"
-                android:gravity="center_vertical"/>
-            <TextView
-                android:id="@+id/textView_acount_side_bedehi_text"
+                android:id="@+id/imageView_acount_side_call"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" بدهکار "
-                android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/icons"
-                android:gravity="center_vertical"/>
-            <TextView
-                android:id="@+id/textView_acount_side_bedehi_dash"
+                android:layout_marginLeft="@dimen/padding_medium"
+                android:background="@drawable/shape_circle"
+                android:backgroundTint="@color/primary_dark"
+                android:padding="@dimen/padding_medium"
+                android:src="@drawable/shape_call_collapsed" />
+
+            <ImageView
+                android:id="@+id/imageView_acount_side_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" - "
-                android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/icons"
-                android:gravity="center_vertical"/>
-            <TextView
-                android:id="@+id/textView_acount_side_bedehi_mablagh"
-                android:paddingRight="@dimen/padding_bit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="150,000,000"
-                android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/icons"
-                android:gravity="center_vertical"/>
-            <TextView
-                android:id="@+id/textView_acount_side_bedehi_vahed"
-                android:layout_marginRight="@dimen/padding_bit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ریال"
-                android:textSize="@dimen/font_xsmall"
-                android:textColor="@color/icons"
-                android:gravity="center_vertical"/>
+                android:background="@drawable/shape_circle"
+                android:backgroundTint="@color/primary_dark"
+                android:padding="@dimen/padding_medium"
+                android:src="@drawable/shape_arrow_drop_down" />
+
         </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical">
-
-        <ImageView
-            android:id="@+id/imageView_acount_side_call"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/shape_call"
-            android:tint="@color/primary_dark"
-            android:padding="@dimen/padding_medium"
-            android:layout_marginLeft="@dimen/padding_medium"
-            />
-
-        <ImageView
-            android:id="@+id/imageView_acount_side_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/shape_arrow_drop_up"
-            android:tint="@color/primary_dark"
-            android:padding="@dimen/padding_medium"/>
 
     </LinearLayout>
 
-</LinearLayout>
-
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/linearLayout_account_side_extra_information"
         android:orientation="vertical"
         android:layout_width="match_parent"
