--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -7,6 +7,8 @@
     android:layoutDirection="rtl"
     tools:context="com.example.mohsen.myaccountingapp.MainActivity">
 
+
+
     <LinearLayout
         android:id="@+id/linearLayout_titleBar"
         android:layout_width="match_parent"
@@ -118,17 +120,6 @@
 
     </LinearLayout>
 
-
-
-    <android.support.v4.widget.NestedScrollView
-        android:background="#fff"
-        android:fillViewport="true"
-        android:id="@+id/nestedscrollview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v4.widget.NestedScrollView>
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -137,5 +128,20 @@
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/primary"
         app:srcCompat="@drawable/shape_plus" />
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedscrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff"
+        android:fillViewport="true">
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/linearLayout_add_layer"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 
 </android.support.design.widget.CoordinatorLayout>
