--- a/app/src/main/res/layout/account_side_layout.xml
+++ b/app/src/main/res/layout/account_side_layout.xml
@@ -2,12 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingRight="@dimen/padding_bit"
+    android:paddingLeft="@dimen/padding_bit"
+    >
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_accountSide"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_item_height" />
 
 </LinearLayout>
